--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             </div>
             <div class="hide-menu">
                 <button class="hamburger" id="hamberger"> 
-        <img src="img/humb.png" alt="" class="hamb" width="rem(28)" height="rem(25)">
+                    <img src="img/x_.png" alt=" " class="namb" id="hambClose" width="rem(28)" height="rem(25)">
+        <img src="img/humb.png" alt="" class="hamb" id="hambOpen" width="rem(28)" height="rem(25)">
     </button>
 
             </div>
